--- a/pages/productos.html
+++ b/pages/productos.html
@@ -66,7 +66,7 @@
 
         </section>
 
-        <div class="row">
+        <!-- <div class="row">
             <section class="imgProducto1 col-xl-3 col-md-6 col-sm-12">
                 <h4>Conjunto primavera</h4>
                 <p>Pantalon color blanco Denim, top varios colores</p>
@@ -100,7 +100,16 @@
             <h3>El total de la compra es: <span id="total"></span> </h3>
             <button class="button" id="verCarrito">Ver Carrito</button>
             <button class="button" id="vaciarCarrito">Vaciar Carrito</button>
-        </div>
+        </div> -->
+        <div id="contenedorProductos" class="row"></div>
+
+        <!-- CARRITO DE COMPRAS -->
+        <hr>
+        <h2>Carrito de Compras</h2>
+        <h3>El total de la compra es <span id="total"></span> </h3>
+        <button class="btn colorBoton" id="verCarrito">Ver Carrito</button>
+        <button class="btn colorBoton" id="vaciarCarrito">Vaciar Carrito</button>
+
         <div id="contenedorCarrito" class="row"></div>
 
     </main>
@@ -123,7 +132,7 @@
         </script>
 
     <!-- JAVASCRIPT -->
-    <script src="javascript/main.js"></script>
+    <script src="/javascript/main.js"></script>
 </body>
 
 </html>
